[gd_scene load_steps=3 format=2]

[ext_resource path="res://circle.svg" type="Texture" id=1]
[ext_resource path="res://TrieNode.gd" type="Script" id=2]

[node name="TrieNode" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -660.0
margin_top = -420.0
margin_right = -620.0
margin_bottom = -380.0
rect_pivot_offset = Vector2( 20, 20 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CharacterLabel" type="Label" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 18.0
text = "A"
align = 1
valign = 1

[node name="FrequencyLabel" type="Label" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 40.0
margin_bottom = 36.0
text = "0"
align = 1
valign = 1

[node name="ChildNode" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -35.0
margin_right = 37.0
margin_bottom = 35.0
__meta__ = {
"_edit_lock_": true
}
